# wallet

./: .gitignore  CMakeLists.txt  README.md
include/: backend.h  rpc.h  tokeninfo.h
resources/: BalancesForm.qml  DepositAndWithdrawForm.qml  SectionTitle.qml  SettingsForm.qml  TabTitle.qml  TitleBar.qml  TransferForm.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/: backend.cpp  main.cpp  rpc.cpp  tokeninfo.cpp
